# rcm_programming_school_project_2026

./: .gitignore  project_test_2026.postman_collection.json  pyproject.toml  readme.md  requirements.txt
apps/auth/: urls.py
apps/orders/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_alter_ordersmodel_created_at.py  0002_commentmodel_order_alter_ordersmodel_group.py  0003_ordersmodel_groupname.py  0004_remove_ordersmodel_groupname.py  0005_alter_ordersmodel_options.py  0006_alter_ordersmodel_options.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_usermodel_managers_usermodel_is_active.py
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py
core/: models.py
core/permissions/: is_admin_or_manager.py  is_same_manager.py  is_superAdmin.py
core/services/: activate_link_generator.py  export_excel.py  export_excel_file.py  filter_orders.py  token_expireDate_check.py
