[tool.poetry]
name = "python-drf-test"
version = "0.1.0"
description = ""
authors = ["DaniilGamers <ss.mihalkivd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-filter = "25.2"
django = "6.0.1"
asgiref = "3.11.0"
django-cors-headers = "4.9.0"
djangorestframework = "3.16.1"
djangorestframework-simplejwt = "5.5.1"
mysqlclient = "2.2.7"
pyjwt = "2.11.0"
rest-framework-simplejwt = "0.0.2"
sqlparse = "0.5.5"
tzdata = "2025.3"
xlwt = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"